--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="languages">
                 <button class="languages__button">
                     <img class="pngbt" src="assets/icons/world.png" alt="icon world">
-                    <span class="languages__text">Portugês do Brasil</span>
+                    <span class="languages__text">Português do Brasil</span>
                 </button>
             </div>
 
@@ -77,7 +77,7 @@
     <div class="footer">
         <div class="footer__text">
             <span class="footer__title">TESTAR O PREMIUM DE GRAÇA</span>
-            <span class="footer__subtitle">Increva-se para ouvir músicas ilimitadas e podcasts só cum alguns anúncios. Não precisa de cartão de crédito.</span>
+            <span class="footer__subtitle">Increva-se para ouvir músicas ilimitadas e podcasts só com alguns anúncios. Não precisa de cartão de crédito.</span>
         </div>
         <button class="footer__bt">Inscreva-se grátis</button>
     </div>
